@@ -1,3 +1,6 @@
+Changelog 0.3.71 [20230513]:
+- Fix mp4upload embed extractor
+
 Changelog 0.3.70 [20230508]:
 - Added playtaku embed extractor
 
